# rxq

./: .gitignore  AGENTS.md  Cargo.toml  README.md  benchmark.sh  package-lock.json  serve.sh
.github/workflows/: deploy-wasm.yml
docs/: rxq-core.md  rxq.man
rxq-cli/: Cargo.toml
rxq-cli/src/: formatters.rs  integration.rs  main.rs  zero_copy_demo.rs
rxq-cli/tests/: count.rs  integration.rs
rxq-core/: Cargo.toml
rxq-core/benches/: parsing.rs  querying.rs
rxq-core/src/: error.rs  format.rs  json.rs  lib.rs  parser.rs  query.rs  types.rs
rxq-core/tests/: absolute_path.rs
rxq-server/: Cargo.toml
rxq-server/src/: main.rs
rxq-wasm/: Cargo.toml
rxq-wasm/src/: document.rs  format.rs  lib.rs  query.rs
tests/data/xml/: multiple.xml
www/: index.html  package-lock.json  package.json  vite.config.ts
www/src/: App.tsx  index.css
www/src/components/: FileDropper.tsx  QuerySection.tsx  ResultViewer.tsx  UrlInput.tsx
www/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Textarea.tsx
