[workspace]
members = ["rxq-core", "rxq-cli", "rxq-wasm", "rxq-server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["rxq contributors"]
license = "MIT"
repository = "https://github.com/dandde/rxq"

[workspace.dependencies]
# Core dependencies
tl = "0.7.7"
thiserror = "1.0"
anyhow = "1.0"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
atty = "0.2"
colored = "3.1"

# Optional features
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Development dependencies
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
